--- a/index.html
+++ b/index.html
@@ -13,17 +13,14 @@
   <body>
     <div class="parent">
         <h1 class="title">VALERIA KHLIMENKOVA</h1>
-        <h2 class="sub-title">THE ROLLING SCOPES SCHOOL STUDENT</h2>       
+        <h2 class="sub-title">THE ROLLING SCOPES SCHOOL STUDENT</h2>
         <div class="child profile">
-          <div class="profile-photo"><img class="photo" src="image/my photo.png" alt="my photo"/></div>         
+          <div class="profile-photo"><img class="photo" src="image/my photo.png" alt="my photo"/></div>
           <section class="section t-white">
             <div class="container">
               <h2 class="section-title">Profile</h2>
-              <p class="info-me">I am a fourth-year student of BSUIR.<br> I want to find 
-                my place in IT and develop my skills every day.<br>
-                My strengths are sociability, teamwork and commitment.<br>
-                I believe that the courses and my persistence 
-                will give excellent results and I will be able to work in pleasure.
+              <p class="info-me">I am a fourth-year student of BSUIR.<br>I want to find my place in IT and develop my skills every day.<br>
+                My strengths are sociability, teamwork and commitment.<br>I believe that the courses and my persistence will give excellent results and I will be able to work in pleasure.
               </p>
             </div>
           </section>
@@ -31,32 +28,17 @@
             <div class="container">
               <h2 class="section-title">Contacts</h2>
               <ul>
-                <li class="contact-item">
-                  <img src="image/telephone.png" alt="tel">
-                  <a href="tel:+375296583909" target="_blank">+375(29)6583909</a>
-                </li>
-                <li class="contact-item">
-                  <img src="image/email.png" alt="email">
-                  <a href="hlimanvalerkoo@mail.ru" target="_blank">hlimanvalerkoo@mail.ru</a>
-                </li>
-                <li class="contact-item">
-                  <img src="image/github.png" alt="github">
-                  <a href="https://github.com/Hlimanvalerkoo" target="_blank">Hlimanvalerkoo</a>
-                </li>
-                <li class="contact-item">
-                  <img src="image/telegram.png" alt="telegram">
-                  <a href="https://t.me/hlimanvalerkoo" target="_blank">@hlimanvalerkoo</a>
-                </li>
-                <li class="contact-item section-last">
-                  <img src="image/discord.png" alt="discord">
-                  <a href="https://discordapp.com/users/609073969294737409/" target="_blank">Hlimanvalerkoo</a>
-                </li>
+                <li class="contact-item"><img src="image/telephone.png" alt="tel"><a href="tel:+375296583909" target="_blank">+375(29)6583909</a></li>
+                <li class="contact-item"><img src="image/email.png" alt="email"><a href="hlimanvalerkoo@mail.ru" target="_blank">hlimanvalerkoo@mail.ru</a></li>
+                <li class="contact-item"><img src="image/github.png" alt="github"><a href="https://github.com/Hlimanvalerkoo" target="_blank">Hlimanvalerkoo</a></li>
+                <li class="contact-item"><img src="image/telegram.png" alt="telegram"><a href="https://t.me/hlimanvalerkoo" target="_blank">@hlimanvalerkoo</a></li>
+                <li class="contact-item section-last"><img src="image/discord.png" alt="discord"><a href="https://discordapp.com/users/609073969294737409/" target="_blank">Hlimanvalerkoo</a></li>
               </ul>
             </div>
-        </section> 
+        </section>
       </div>
     </div>
-    <main class="main"> 
+    <main class="main">
       <section class="section" id="education">
         <div class="container">
           <div class="div-section-title">
@@ -97,7 +79,7 @@
           <code class="code">
             function sum(a, b) {<br>
               return a + b;<br>
-            } <br><br>
+            }<br><br>
             let result = sum(1, 2);<br>
             alert(result);
           </code>
@@ -117,4 +99,4 @@
         </div>
       </section>
     </main>
-</body>
+  </body>
